# compressonator-compiler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: TargetLinkCompressonator.cmake
patches/: CMakeLists.txt  glm.cmake
patches/cmp_compressonatorlib/: CMakeLists.txt
patches/cmp_core/: CMakeLists.txt
patches/cmp_core/source/: core_simd_apple.cpp
